@@ -5,7 +5,7 @@
 1999-03-02 09:44:33 U=CALLER F=<> temporarily rejected RCPT <"deny verify = header_syntax"@test.ex>: cannot check header contents in ACL for RCPT (only possible in ACL for DATA)
 1999-03-02 09:44:33 U=CALLER F=<> temporarily rejected RCPT <"deny verify = junk"@test.ex>: expected "sender[=address]", "recipient", "helo", "header_syntax", "header_sender" or "reverse_host_lookup" at start of ACL condition "verify junk"
 1999-03-02 09:44:33 U=CALLER F=<> temporarily rejected RCPT <"deny vorify = junk"@test.ex>: unknown ACL condition/modifier in "deny vorify = junk"
-1999-03-02 09:44:33 U=CALLER F=<> temporarily rejected RCPT <"dony verify = junk"@test.ex>: unknown ACL verb in "dony verify = junk"
+1999-03-02 09:44:33 U=CALLER F=<> temporarily rejected RCPT <"dony verify = junk"@test.ex>: unknown ACL verb "dony" in "dony verify = junk"
 1999-03-02 09:44:33 U=CALLER F=<> temporarily rejected RCPT <"deny !message = abcd"@test.ex>: ACL error: negation is not allowed with "message"
 1999-03-02 09:44:33 10HmaX-0005vi-00 U=CALLER F=<> temporarily rejected after DATA: cannot verify recipient in ACL for DATA (only possible for RCPT)
 1999-03-02 09:44:33 10HmaY-0005vi-00 U=CALLER F=<> temporarily rejected after DATA: cannot test domains condition in DATA ACL
