@@ -1,4 +1,4 @@
-$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.357 2006/06/27 13:39:01 ph10 Exp $
+$Cambridge: exim/doc/doc-txt/ChangeLog,v 1.358 2006/06/27 14:04:29 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -38,6 +38,8 @@ TF/05 Make it easier to get SMTP authentication and TLS/SSL support working
 PH/01 Added #define LDAP_DEPRECATED 1 to ldap.c because some of the "old"
       functions that Exim currently uses aren't defined in ldap.h for OpenLDAP
       without this. I don't know how relevant this is to other LDAP libraries.
+
+PH/02 Add the verb name to the "unknown ACL verb" error.
 
 
 Exim version 4.62
